@@ -1,4 +1,5 @@
 1.1.6:
+	- Include document notes in searches
 	- Plugin interface: add bibtex_to_fields utility function, 
 	  add print_bibtex method to PythonDocument
 	- Docbook manual (Mario Blätterman)
